--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 noData: '找不到结果',
                 depth: 4,
                 hideOtherSidebarContent: false,
-                namespace: 'Docsify-Guide',
+                namespace: 'Docs-yangtao',
             },
             markdown: {
                 renderer: {
